Fixed nav padding on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -67,6 +67,7 @@
 
 @media (width <= 740px) {
   ul {
+    padding-left: 0;
     flex-direction: column;
     align-items: center;
   }
